# learn_and_use

./: README.md
DesignPattern/Observer/: main.cpp  observer.hpp  readme.md
c/: mymemop.c  mystrop.c
cpp/: about_init.cpp  brace_init.cpp  convert_ip_to_n.cpp  cpprun  handleio.cpp  not_void.cpp  operator_cast.cpp  operator_overload.cpp  overwrite.cpp  pointersize.cpp  setprecision.cpp  sortpair.cpp  stacksize.cpp  string_cstr.cpp  string_literal.c  string_literal.cpp  use_assert.cpp  use_cast.cpp  use_const.cpp  use_enum.cpp  use_for-auto.cpp  use_format.cpp  use_move.cpp  use_refer.cpp  use_stringstream.cpp  usebind.cpp  usecontext.cpp  usecontext2.c  usecontext2.cpp  usefileio.cpp  usequeue.cpp  usesleep.cpp  usetime.cpp  usevoid.cpp
cpp/aboutheader/: main.cpp  usea.cpp
cpp/atomics/: Bit_manipulation.cpp  Makefile  bitset.cpp  custom_bitset.hpp  dense_bitset.hpp  useatomic.cpp
cpp/build_boost/: use_boost.cpp
cpp/c++primer/: actlike.cpp  refer_qualifier.cpp  sharedptr-race-cond.cpp  stringVector.cpp  use_allocator.cpp  use_newarry.cpp  use_sharedptr.cpp  use_uniqueptr.cpp  usenew.cpp
cpp/mystl/: ringbuffer.cpp  ringbuffer.pu
cpp/pthread/: Makefile  basic.cpp  implement_barrier.cpp  stdthread_nocopy.cpp  use_pthread_barrier.cpp  use_stdthread.cpp  use_thread_local.cpp
cpp/rpc/helloworld/: CMakeLists.txt  client.cc  hello.grpc.pb.cc  hello.grpc.pb.h  hello.pb.cc  hello.pb.h  raw_build.sh  server.cc
cpp/rpc/helloworld/src/: CMakeLists.txt  hello.proto
cpp/stl/: Makefile  a.out  reference_to_vector.cpp  remove_inside_loop.cpp  use_foreach.cpp  use_iterator.cpp  use_map.cpp  use_max_element.cpp  use_nth_ele.cpp  use_partition.cpp  use_set.cpp  usevector.cpp
cpp/template/: Makefile  basic.cpp  basic2.cpp
cpp/tt/: a.out  aa  aaa.c  atomics.tgz  boostc.c  hhh.c  stacku  usecontext.c  uses.c  uu
cpp/tt/atomics/: main.c  pg
cpp/ucontext/: copycontext.cpp  func.cpp  u  uclink.cpp  validate_copy.cpp
cpp/use_eigen/: Makefile  use_eigen.cpp
cpp/usecmake/build_boost/: CMakeLists.txt  Makefile  hellompi.c
cpp/usecmake/gendynamiclib/: CMakeLists.txt
cpp/usecmake/gendynamiclib/include/: myfun.h
cpp/usecmake/gendynamiclib/lib/: CMakeLists.txt  myfun.cpp  usefun.cpp
cpp/usecmake/gendynamiclib/uselib/: CMakeLists.txt  main.cpp
cpp/usecmake/normaluse/: CMakeLists.txt
cpp/usecmake/usedylib/: CMakeLists.txt
cpp/usecmake/usedylib/include/: usefun.h
cpp/usecmake/usedylib/uselib/: CMakeLists.txt  a.out  main.cpp
cpp/usestatic/: bar.cpp  foo.cpp  staticmethod.cpp  usestatic.cpp
cpp/utilities/ThreadPool/: Makefile  TaskQueue.hpp  ThreadPool.cpp  ThreadPool.hpp  main.cpp  readme.md
docker/: docker使用日常.md
go/: Fibonacci_closure.go  GoroutineUseLoopVariable.go  builtin.go  channel_deadlock.go  closure.go  handle_file.go  main.go  methods.go  scanf_wait_goroutine.go  string_rune.go  stringer  stringer.go  use_json.go  use_maps.go  use_select.go  use_slices.go  use_sort.go  use_strconv.go  use_timerticker.go  use_waitgroup.go  usefmt.go
go/src/userpc/: service.go
go/src/userpc/examples/: client.go  server.go
latex/: beamer.tex  hello.tex  insert_pdf.tex  table.tex
markup/latex/: beamer-slides-with-notes.tex  beamer.tex  diffpdf.tex  inputcn.tex  inputcn2.tex  insert_pdf.tex  newcommand.tex  table.tex  tbox.tex  tdclock-beamer-example.tex  tmp.tex  validate_line.tex
mpi/: Makefile  a.out  calc_usempi.c  calcpi.c  deadlockmpi.c  hellompi.c  matrix_vector_master_slave_mpi.cpp  mpi_Bsend.c  mpi_group_communicater.c  mpi_scatter.c  mpihello.c  use_barrier.c  usesend.c  ya_deadlockmpi.c
openmp/: calcpi.c  calcpi_loop.c  calcpi_openmp.c  calcpi_openmp_false_sharing.c  hellomp.c  parallel_for.cpp
profile/: analysis.txt  gmon.out  profile_cpp.cpp  test_gprof  test_gprof.c
python/: cal_tax.py  handlexls.py  money.py  test_when.py
python/sockets/: mysocket.py
shell/: aboutarray.sh  example.sh  handfile.sh  heredoc.sh  normal_use.sh  run_lbp.sh  sed_awk.sh
